Fix date picker not visible in slideshow sharing dialog
The z-index for the date picker is forced in the server CSS files to
"1111" through the use of "!important", so even if a higher value is
explicitly set in the "style" attribute of the element the value set in
the server CSS files is the one used. As the z-index of the slideshow is
"100000" and the date picker is added as a sibling of it and not as a
child the date picker appears behind the slideshow. In order to be
visible the date picker needs to override the z-index set in the server
CSS files to be higher than the one used for the slideshow and for the
share dialog shown in the slideshow.

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -200,3 +200,10 @@
 	/** above slideshow buttons */
 	z-index: 100001;
 }
+
+#slideshow ~ .ui-datepicker {
+	/* Larger than the slideshow share dropdown z-index, and important
+	   to override both the important z-index from the server and the
+	   value set in the element by jQuery UI Datepicker Widget */
+	z-index: 100010 !important;
+}
